NTP: Don't show any sections or layout until we receive mv and apps data. This improves performance and avoids flickeryness.
BUG=56278
TEST=Install some apps and refresh the ntp over and over.
Should not see flickering as mv section, then apps load.

Review URL: http://codereview.chromium.org/3474006

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@60306 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 996d12814644592c9ab8cba13ab3611d9dabd655

--- a/chrome/browser/resources/new_new_tab.css
+++ b/chrome/browser/resources/new_new_tab.css
@@ -22,6 +22,12 @@ html[mode=app-launcher] {
   min-height: 100%;
 }
 
+body.loading #main {
+  /* We start out hidden to prevent glitchiness as the app and most visited
+  data flows in. */
+  visibility: hidden;
+}
+
 #main,
 .section,
 .maxiview {
